@@ -3,7 +3,6 @@ FIXME
     locator width is too small. Use line edit and selection!!
     prepend * when searching in current dir
     thread and sand clock while searching in locator
-    cd file browser to dragged folder
     default font in the settings in white on white
 won't fix
     remove submenus, except edit, recents
