@@ -1,3 +1,6 @@
+May 5 2012
+    Open directories in File Browser, when drag-n-dropt to the main window
+
 Apr 30 2012
     Locator. (File open dialog with bash-like tab completion)
 
